added lorem word

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item"><a href="#home" class="nav__link active-link">Home</a></li>
-                        <li class="nav__item"><a href="#share" class="nav__link">Share</a></li>
-                        <li class="nav__item"><a href="#decoration" class="nav__link">Decorations</a></li>
+                        <li class="nav__item"><a href="#share" class="nav__link">About</a></li>
+                        <li class="nav__item"><a href="#decoration" class="nav__link">Contact us</a></li>
                         <li class="nav__item"><a href="#accessory" class="nav__link">Accessory</a></li>
 
                         <li><i class='bx bx-toggle-left change-theme' id="theme-button"></i></li>
@@ -61,7 +61,7 @@
                 <div class="share__container bd-grid">
                     <div class="share__data">
                         <h2 class="section-title-center">Sharing Is The Best Gift <br> You Can Give</h2>
-                        <p class="share__description">Sharing these holidays is the best gift you can give, give a present or share your love with the people you love the most and celebrate with great happiness.</p>
+                        <p class="share__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum non totam animi amet quaerat eaque. Deleniti natus, nostrum eaque iusto, tempora earum, praesentium tenetur eveniet ab aperiam blanditiis quae numquam..</p>
                         <a href="#" class="button">Send a Gift</a>
                     </div>
 
@@ -70,7 +70,6 @@
                     </div>
                 </div>
             </section>
-
             <!--========== DECORATION ==========-->
             <section class="decoration section bd-container" id="decoration">
                 <h2 class="section-title">Give Christmas Decorations <br> For Your Home</h2>
@@ -150,7 +149,7 @@
                         <p class="send__description">Start giving away before the holidays are over. Write the home address of the person who will send the gift.</p>
                         <form action="">
                             <div class="send__direction">
-                                <input type="text" placeholder="House address" class="send__input">
+                                <input type="text" placeholder="address" class="send__input">
                                 <a href="#" class="button">Send</a>
                             </div>
                         </form>
